# SpotPriceWatch

./: .gitignore  README.md  pyproject.toml
src/: routes.py
src/services/: spot_price_data.py
src/static/: style.css
src/templates/: index.html
